<resources>
    <string name="app_name">Blog</string>
    <string name="logoforloginpage">logoForLoginPage</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_to_account">Login to Account</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="create_account">Create Account</string>
    <string name="already_acnt_btn">Already have an account?</string>
    <string name="search_menu">Search</string>
    <string name="menu_settings">Account Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="setup_name">Name</string>
    <string name="setup_save">Save Account Settings</string>
    <string name="add_your_content">Please add your content</string>
    <string name="post_blog">Post Blog</string>
    <string name="post_image">post image</string>
    <string name="floating_button">Floating Button</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notifications_text">Notifications</string>
    <string name="bottom_account_text">Account</string>
</resources>