<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/registerPageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logoforloginpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_progress"
        app:srcCompat="@drawable/register_logo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/your_e_mail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/placeholderWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPageLogo" />

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/placeholderWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_confirm_pass_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/placeholderWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pass" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_pass_btn" />

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/already_acnt_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="27dp"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/already_acnt_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>